--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "auto_parts",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@fontsource/lexend": "^5.0.20",
-    "@supabase/supabase-js": "^2.45.1",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+	"name": "auto_parts",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prepare": "husky install"
+	},
+	"dependencies": {
+		"@fontsource/lexend": "^5.0.20",
+		"@supabase/supabase-js": "^2.45.1",
+		"next": "14.2.5",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^5.3.0"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "14.2.5",
+		"husky": "^8.0.0",
+		"lint-staged": "^15.2.9",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --fix",
+			"tsc --noEmit"
+		]
+	}
 }
